# sensors-libraries

./: README.md  gitignore.txt
AS5600_HAL_Library/: Doxyfile  README.md  as5600_lib.c  as5600_lib.h  as5600_types.h  platform_adc_esp32s3.h  platform_i2c_esp32s3.h
AS5600_HAL_Library/main/: CMakeLists.txt  as5600_defs.h  as5600_lib.c  as5600_lib.h  main.c  platform_esp32s3.c  platform_esp32s3.h
TM151-driver/: CMakeLists.txt  README.md  sdkconfig
TM151-driver/EasyProfile/: EasyObjectDictionary.c  EasyProfile.c  EasyProtocol.c  EasyQueue.c  EasyRetrieve.c
TM151-driver/EasyProfile/include/: BasicTypes.h  EasyObjectDictionary.h  EasyProfile.h  EasyProtocol.h  (+2 more)
TM151-driver/main/: CMakeLists.txt  main.c
TM151-driver/platform/: platform_esp32s3.c
VL53L1X-driver/Driver/: VL53L1X.c  VL53L1X.h  VL53L1X_types.h  platform_i2c_esp32s3.c  platform_i2c_esp32s3.h
VL6180X-driver/: CMakeLists.txt  README.md  sdkconfig
VL6180X-driver/components/: CMakeLists.txt
VL6180X-driver/main/: CMakeLists.txt  i2c_vl6180x_calibration.c  i2c_vl6180x_irq.c  i2c_vl6180x_main.c
VL6180X-driver/platform/: platform_esp32s3.c
VL6180X-driver/vl6180x_api/: vl6180x_i2c.c
VL6180X-driver/vl6180x_lib/: vl6180x_lib.c
VL6180_Library/: i2c_platform.c  i2c_platform.h  vl6180.c  vl6180.h
bno055-adaptable-driver/: .gitignore  CMakeLists.txt  README.md  bno055.c  bno055.h  bno055_defs.h  main.c  platform_esp32s3.c  platform_esp32s3.h
bno055-adaptable-driver/main/: CMakeLists.txt  bno055.c  bno055.h  bno055_defs.h  idf_component.yml  led.h  main.c  platform_esp32s3.c  platform_esp32s3.h
(+20 files in other folders)
